deployments/sail-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: sail
  labels:
    app: sail
spec:
  selector:
    app: sail
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sail
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sail
  labels:
    app: sail
spec:
  tls:
  - secretName: sail-tilt-dev-crt
  backend:
    serviceName: sail
    servicePort: 80
