deployments/sail-staging-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: sail-staging
  labels:
    app: sail-staging
spec:
  selector:
    app: sail-staging
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sail-staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sail-staging
  labels:
    app: sail-staging
spec:
  tls:
  - secretName: sail-staging-tilt-dev-crt
  backend:
    serviceName: sail-staging
    servicePort: 80
